Primera inclusion de codigo en VistaGUI desde VistaConsola